# kafka_python_microservice

./: .dockerignore  .env.example  docker-compose.yml  otel-collector-config.yaml
case_management_service/: Dockerfile  README.md  pyproject.toml  requirements.txt
case_management_service/app/: __init__.py  command_handlers.py  commands.py  config.py  database.py  domain_events.py  event_projectors.py  kafka_consumer.py  kafka_models.py  main.py  observability.py
case_management_service/app/api/routers/: cases.py  documents.py  persons.py  raw_events.py
case_management_service/app/api/v1/endpoints/: __init__.py  cases.py  documents.py  health.py  persons.py  raw_events.py
case_management_service/app/dependencies/: http_client.py
case_management_service/app/models/: __init__.py  beneficial_owner_db.py  case_management_db.py  company_profile_db.py  person_db.py  raw_event_db.py  required_document_db.py  stored_event_db.py  stored_event_meta_data.py
case_management_service/app/models/events/: models.py
case_management_service/app/service/: exceptions.py
case_management_service/app/service/commands/: handlers.py  models.py
case_management_service/app/service/events/: projectors.py
case_management_service/app/service/interfaces/: notification_config_client.py
case_management_service/app/service/strategies/: document_strategies.py  notification_strategies.py
case_management_service/core/commands/: __init__.py  handlers.py  models.py
case_management_service/core/events/: __init__.py  models.py  projectors.py
case_management_service/docs/: 01_architecture.md  02_api_guide.md  03_kafka_events_and_contracts.md  04_event_sourcing_and_cqrs.md  05_deployment.md  06_testing_strategy.md  07_observability.md  index.md
case_management_service/docs/feature_guides/: 01_company_bo_modeling.md  02_awaiting_documents.md  03_notifications.md
case_management_service/docs/tutorials/: 00_introduction_and_project_overview.md  01_project_structure_and_setup.md  02_cqrs_and_event_sourcing_deep_dive.md  03_kafka_integration_consumer_and_producer.md  04_mongodb_interaction.md  05_fastapi_and_api_design.md  06_observability_with_opentelemetry.md  07_unit_testing_strategy.md  08_dockerization_and_local_deployment.md  09_feature_walkthrough_company_bo_modeling.md  10_feature_walkthrough_awaiting_documents.md  11_feature_walkthrough_notifications.md  12_conclusion_and_next_steps.md  summary.md
case_management_service/infrastructure/: __init__.py  config_service_client.py
case_management_service/infrastructure/database/: __init__.py  connection.py  document_requirements_store.py  event_store.py  raw_event_store.py  read_models.py  schemas.py
case_management_service/infrastructure/kafka/: __init__.py  consumer.py  producer.py  schemas.py
case_management_service/kubernetes/: 01_configmap.yaml  02_api_deployment.yaml  03_api_service.yaml  04_consumer_deployment.yaml
case_management_service/tests/app/: __init__.py  test_api.py  test_main.py  test_observability.py
case_management_service/tests/app/api/: __init__.py
case_management_service/tests/app/api/v1/endpoints/: test_cases_api.py  test_documents_api.py  test_health_api.py  test_persons_api.py  test_raw_events_api.py
case_management_service/tests/app/service/: __init__.py
case_management_service/tests/app/service/commands/: __init__.py  test_command_handlers.py
case_management_service/tests/app/service/events/: __init__.py  test_event_projectors.py  test_projectors.py
case_management_service/tests/app/service/strategies/: __init__.py  test_notification_strategies.py
case_management_service/tests/core/: __init__.py
case_management_service/tests/core/commands/: __init__.py  test_command_handlers.py
case_management_service/tests/core/events/: __init__.py  test_event_projectors.py
case_management_service/tests/functional/: test_kyc_lifecycle.py
case_management_service/tests/infrastructure/: __init__.py  test_config_service_client.py
case_management_service/tests/infrastructure/database/: __init__.py  test_database.py  test_document_requirements_store.py  test_raw_event_store.py  test_read_models.py
case_management_service/tests/infrastructure/kafka/: __init__.py  test_kafka_consumer.py  test_kafka_producer.py  test_kafka_schemas.py
case_management_service/tests/integration/: test_case_flow_integration.py  test_kafka_integration.py
python_microservice_template/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
python_microservice_template/app/: __init__.py
python_microservice_template/app/api/: __init__.py
python_microservice_template/app/api/v1/: __init__.py
python_microservice_template/app/api/v1/endpoints/: __init__.py  health_routes.py
python_microservice_template/app/models/: __init__.py
python_microservice_template/app/models/read/: __init__.py
python_microservice_template/app/models/write/: __init__.py
python_microservice_template/app/services/: __init__.py
python_microservice_template/app/services/commands/: __init__.py
python_microservice_template/app/services/event_handlers/: __init__.py
python_microservice_template/app/services/queries/: __init__.py
python_microservice_template/infra/: __init__.py  config.py  di.py
python_microservice_template/infra/db/: __init__.py  mongo.py
python_microservice_template/infra/messaging/: __init__.py
python_microservice_template/infra/telemetry/: __init__.py  otel.py
python_microservice_template/tests/: __init__.py
python_microservice_template/tests/integration/: __init__.py
python_microservice_template/tests/unit/: __init__.py
python_microservice_template/tests/unit/app/: __init__.py
python_microservice_template/tests/unit/app/api/: __init__.py
python_microservice_template/tests/unit/app/api/v1/: __init__.py
python_microservice_template/tests/unit/app/api/v1/endpoints/: __init__.py  test_health_routes.py
tests/app/: test_api.py
tests/core/commands/: test_command_handlers.py
tests/core/strategies/: test_document_strategies.py
(+1 files in other folders)
