[tool.poetry]
name = "case-management-service"
version = "0.4.0" # Assuming a version bump due to significant changes
description = "Case Management Microservice for KYC/KYB, using FastAPI, Kafka, MongoDB, CQRS/ES, and OpenTelemetry."
authors = ["AI Developer <ai.dev@example.com>"] # Placeholder author
license = "MIT" # Placeholder license
readme = "README.md"
packages = [
    { include = "app" },
    { include = "core" },
    { include = "infrastructure" },
]
# The above 'packages' directive assumes that 'app', 'core', and 'infrastructure'
# are directories directly under 'case_management_service/' (where this pyproject.toml resides)
# and are intended to be importable modules of the 'case-management-service' package.
# For example, `from app.main import ...` or `from core.commands import ...`.
# This is a common way to structure a project managed by Poetry when pyproject.toml
# is at the root of the source code for the package.

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
confluent-kafka = "^2.2.0"
pymongo = "^4.3"
python-json-logger = "^2.0.7"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"
opentelemetry-instrumentation-fastapi = "^0.40b0"
opentelemetry-instrumentation-pymongo = "^0.40b0"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.scripts]
start-api = "uvicorn case_management_service.app.main:app --host 0.0.0.0 --port 8000 --reload"
start-consumer = "python -u case_management_service.infrastructure.kafka.consumer.py"
test = "poetry run pytest case_management_service/tests/"
lint = "poetry run flake8 case_management_service/"
format = "poetry run black case_management_service/ && poetry run isort case_management_service/"
check-format = "poetry run black --check case_management_service/ && poetry run isort --check-only case_management_service/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
